# spob-the-builder

./: README.md  init.sh  spob-bs.sh
spobutils/: CMakeLists.txt  bit_math.h  spobutils.h  std_types.h
spobutils/spob_memory/: CMakeLists.txt  spob_memory.c  spob_memory.h
spobutils/spob_string/: CMakeLists.txt  spob_string.c  spob_string.h
templates/Default.asm/: Makefile  SPOB.asm  SPOB.asmh
templates/DirStructureWithCMake.c/: CMakeLists.txt  main.c
templates/DirStructureWithCMake.c/inc/: SPOB.h
templates/DirStructureWithCMake.c/src/: SPOB.c
templates/DirStructureWithCMake.cpp/: CMakeLists.txt  main.cpp
templates/DirStructureWithCMake.cpp/inc/: SPOB.hpp
templates/DirStructureWithCMake.cpp/src/: SPOB.cpp
templates/SimpleWithMake.c/: Makefile  SPOB.c  SPOB.h
